# scm-2-matched-filter

./: .gitignore  README.md  scm-2-matched-filter.sln
docs/: BUILDING.md
src/libmf/: Cargo.toml  build.rs  libmf.targets  libmf.vcxproj
src/libmf/src/: fm.rs  lib.rs
src/libmf/src/fm/: reg.rs
src/matched-filter/: Resource.h  framework.h  matched-filter.cpp  matched-filter.h  matched-filter.vcxproj  matched-filter.vcxproj.filters  matched-filterDlg.cpp  matched-filterDlg.h  matchedfilter.rc  model.h
src/matched-filter/res/: matchedfilter.rc2
