[package]
name = "libmf"
version = "0.1.0"
authors = ["kalaider <a.kalaider@yandex.ru>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "libmf"
crate-type = ["dylib"]

[build-dependencies]
cbindgen = "0.9.1"
